# superconductor

./: .gitignore  README.md  beat_tracker.py  client.py  environment.yml  filterconst.py  hand_tracking.py  kalman_filters.py  new_tempo_detector.py  plot.py  pyproject.toml  scheduler.py  superconductor_server.py  tempo_constants.py  tempo_detection.py  tempo_math.py  tempo_pipeline.py  test_camera.py  vibe.py  video_output.py
superconductor/: experiment.py  laptop.py  launcher.py  magenta_client.py  magenta_client_stream.py  magenta_client_stream_dennis.py  mock_local_server.py  networking.py  testing_queue.py
superconductor/gesture_recognition/: README.md  __init__.py  __main__.py  create_datasets.py  custom_dataset.py  model.py  palm_hold_release_model.pth  train.py
superconductor/gesture_recognition/palm_hold_release/: label_map.csv
superconductor/recipe_interface/: __init__.py  __main__.py
