[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superconductor"
description = "artsengine.engin.umich.edu - SuperConductor: Exploring Playful Human-AI Music Co-creativity"
version = "0.1.0"
dependencies = [
      "absl-py==2.4.0",
      "attrs==25.4.0",
      "cffi==2.0.0",
      "click==8.3.1",
      "contourpy==1.3.3",
      "cycler==0.12.1",
      "filelock==3.25.2",
      "flatbuffers==25.12.19",
      "fonttools==4.62.1",
      "fsspec==2026.2.0",
      "jax==0.7.1",
      "jaxlib==0.7.1",
      "jinja2==3.1.6",
      "joblib==1.5.3",
      "kiwisolver==1.5.0",
      "markupsafe==3.0.3",
      "matplotlib==3.10.8",
      "mediapipe==0.10.21",
      "ml-dtypes==0.5.4",
      "mpmath==1.3.0",
      "networkx==3.6.1",
      "numpy==1.26.4",
      "opencv-contrib-python==4.11.0.86",
      "opencv-python==4.11.0.86",
      "opt-einsum==3.4.0",
      "pandas==3.0.1",
      "pillow==12.1.1",
      "protobuf==4.25.8",
      "pycparser==3.0",
      "pydub==0.25.1",
      "pyparsing==3.3.2",
      "python-dateutil==2.9.0.post0",
      "scikit-learn==1.8.0",
      "scipy==1.17.1",
      "sentencepiece==0.2.1",
      "six==1.17.0",
      "sounddevice==0.5.5",
      "sympy==1.14.0",
      "threadpoolctl==3.6.0",
      "torch==2.10.0",
      "typing-extensions==4.15.0"
]

[tool.setuptools.packages.find]
exclude = ["media", "bin"]

[project.scripts]
sc-laptop = "superconductor.laptop:main"
sc-server = "superconductor.mock_local_server:main"
sc-update = "superconductor.laptop:update_superconductor"
sc-audio-device = "superconductor.laptop:audio_device"
superconductor = "superconductor.launcher:main"
